newsletter update and ui optimization in media section

--- a/Homepage.html
+++ b/Homepage.html
@@ -102,76 +102,95 @@
 
     <div class="container-page">
         <div class="row">
-            <!-- Media Resource Cards -->
-            <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
-                <a href="ictv.html" class="text-decoration-none">
-                    <div class="card text-center media-card card-hover">
+        <!-- ICTV Card -->
+        <div class="col-md-4 mb-4 media-container" data-aos="zoom-in" data-aos-delay="100">
+            <a href="ictv.html" class="text-decoration-none">
+                <div class="card text-center media-card">
+                    <div class="position-relative">
                         <picture>
-                            <source srcset="./assets/img/media_thumbnail/ICTv.webp" type="image/webp">
-                            <img src="./assets/img/media_thumbnail/ICTv.png" class="card-img-top media-img" alt="ICTV">
-                        </picture>              
-                        <div class="card-body">
-                            <h5 class="card-title">ICTV</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
-                <a href="iec.html" class="text-decoration-none">
-                    <div class="card text-center media-card card-hover">
-                        <picture>
-                            <source srcset="./assets/img/media_thumbnail/IEC.webp" type="image/webp">
-                            <img src="./assets/img/media_thumbnail/IEC.png" class="card-img-top media-img" alt="IEC Materials">
+                            <source srcset="./assets/img/media_thumbnail/media_ictv.webp" type="image/webp">
+                            <img src="./assets/img/media_thumbnail/media_ictv.png" class="card-img-top media-img" alt="ICTV">
                         </picture>
-                        <div class="card-body">
-                            <h5 class="card-title">IEC Materials</h5>
-                        </div>
+                        <div class="media-overlay">See more →</div>
                     </div>
-                </a>
-            </div>
+                    <div class="card-body">
+                        <h5 class="card-title">ICTV</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
 
-            <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
-                <a href="modules.html" class="text-decoration-none">
-                    <div class="card text-center media-card card-hover">
+        <!-- IEC Materials Card -->
+        <div class="col-md-4 mb-4 media-container" data-aos="zoom-in" data-aos-delay="200">
+            <a href="iec.html" class="text-decoration-none">
+                <div class="card text-center media-card">
+                    <div class="position-relative">
                         <picture>
-                            <source srcset="./assets/img/media_thumbnail/MODULES.webp" type="image/webp">
-                            <img src="./assets/img/media_thumbnail/MODULES.png" class="card-img-top media-img" alt="Modules">
+                            <source srcset="./assets/img/media_thumbnail/media_iec.webp" type="image/webp">
+                            <img src="./assets/img/media_thumbnail/media_iec.png" class="card-img-top media-img" alt="IEC Materials">
                         </picture>
-                        <div class="card-body">
-                            <h5 class="card-title">MODULES</h5>
-                        </div>
+                        <div class="media-overlay">See more →</div>
                     </div>
-                </a>
-            </div>
+                    <div class="card-body">
+                        <h5 class="card-title">IEC Materials</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
 
-            <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="400">
-                <a href="newsletter.html" class="text-decoration-none">
-                    <div class="card text-center media-card card-hover">
+        <!-- MODULES Card -->
+        <div class="col-md-4 mb-4 media-container" data-aos="zoom-in" data-aos-delay="300">
+            <a href="modules.html" class="text-decoration-none">
+                <div class="card text-center media-card">
+                    <div class="position-relative">
                         <picture>
-                            <source srcset="./assets/img/media_thumbnail/news.webp" type="image/webp">
-                            <img src="./assets/img/media_thumbnail/news.png" class="card-img-top media-img" alt="Newsletter">
+                            <source srcset="./assets/img/media_thumbnail/media_modules.webp" type="image/webp">
+                            <img src="./assets/img/media_thumbnail/media_modules.png" class="card-img-top media-img" alt="Modules">
                         </picture>
-                        <div class="card-body">
-                            <h5 class="card-title">NEWS LETTER</h5>
-                        </div>
+                        <div class="media-overlay">See more →</div>
                     </div>
-                </a>
-            </div>
+                    <div class="card-body">
+                        <h5 class="card-title">MODULES</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
 
-            <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="500">
-                <a href="tech portfolio.html" class="text-decoration-none">
-                    <div class="card text-center media-card card-hover">
+        <!-- NEWSLETTER Card -->
+        <div class="col-md-4 mb-4 media-container" data-aos="zoom-in" data-aos-delay="400">
+            <a href="newsletter.html" class="text-decoration-none">
+                <div class="card text-center media-card">
+                    <div class="position-relative">
                         <picture>
-                            <source srcset="./assets/img/media_thumbnail/techprof.webp" type="image/webp">
-                            <img src="./assets/img/media_thumbnail/techprof.png" class="card-img-top media-img" alt="Tech Portfolio">
+                            <source srcset="./assets/img/media_thumbnail/media_news.webp" type="image/webp">
+                            <img src="./assets/img/media_thumbnail/media_news.png" class="card-img-top media-img" alt="Newsletter">
                         </picture>
-                        <div class="card-body">
-                            <h5 class="card-title">TECH PORTFOLIO</h5>
-                        </div>
+                        <div class="media-overlay">See more →</div>
                     </div>
-                </a>
-            </div>
+                    <div class="card-body">
+                        <h5 class="card-title">NEWS LETTER</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <!-- TECH PORTFOLIO Card -->
+        <div class="col-md-4 mb-4 media-container" data-aos="zoom-in" data-aos-delay="500">
+            <a href="tech portfolio.html" class="text-decoration-none">
+                <div class="card text-center media-card">
+                    <div class="position-relative">
+                        <picture>
+                            <source srcset="./assets/img/media_thumbnail/media_techprof.webp" type="image/webp">
+                            <img src="./assets/img/media_thumbnail/media_techprof.png" class="card-img-top media-img" alt="Tech Portfolio">
+                        </picture>
+                        <div class="media-overlay">See more →</div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">TECH PORTFOLIO</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
         </div>
     </div>
 </section>
@@ -479,22 +498,16 @@
                     </a>
                 </div>
                 <!-- Last card (banner) -->
-                <div class="col-6 col-md-4 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
+                <div class=" col-md-3 mb-4" data-aos="zoom-in" data-aos-delay="700">
                     <a href="#sdgs" class="text-decoration-none">
-                        <div class="card h-100 shadow-sm border-0 sdg-card-hover">                 
-                        <picture>
-                                <source srcset="./assets/img/sdgs/SDGS-banner.webp" type="image/webp">
-                                <img src="./assets/img/sdgs/SDGS-banner.png" alt="Image" loading="lazy" class="background-img-sdg">
-                            </picture>
+                        <div class="card sdg-card">                 
+                            <img src="./assets/img/sdgs/SDGS-banner.png" alt="Image" loading="lazy" class="background-img-sdg">
                         </div>
                     </a>
                 </div>
-            <!-- Add all other SDG cards similarly here -->
-    
-
         </div>
     </div>
-    </section>
+</section>
 
 <!-- About Section -->
 <section id="about" class="py-5 about-section">
@@ -542,7 +555,7 @@
       <div class="col-12 col-md-3 text-center text-md-start">
         <div class="custom-footer-logos d-flex flex-wrap justify-content-center justify-content-md-start gap-2">
           <img src="assets/img/iptbm.png" alt="Logo 1" class="custom-footer-logo">
-          <img src="assets/img/kmlogo.png" alt="Logo 2" class="custom-footer-logo">
+          <img src="assets/img/logo.png" alt="Logo 2" class="custom-footer-logo">
           <img src="assets/img/sibultbi-logo.png" alt="Logo 3" class="custom-footer-logo">
           <img src="assets/img/officeofinnovation.png" alt="Logo 4" class="custom-footer-logo">
         </div>
