--- a/iec.html
+++ b/iec.html
@@ -65,15 +65,16 @@
     <div class="background-overlay"></div>
 </div>
 
-    <div class="container-page mb-5">
+  <div class="container-page mb-5">
       <div class="row g-4 mt-4">
 
       <!-- Brochure Card -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-6">
         <a href="./assets/files/iec_brochure/Brochure-Tilapia_supplement.pdf" target="_blank" class="text-decoration-none">
           <div class="card h-100 shadow brochure-card">
               <img src="./assets/img/iec_thumbnail/iec_tilapia_supplements.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
-            <div class="card-body">
+              <div class="overlay"><i class="fa fa-eye"  style="font-size: 24px;"></i></div>
+              <div class="card-body">
               <h5 class="card-title">Tilapia Supplement</h5>
               <p class="card-text small text-muted">Supplements aid tilapia farming by promoting growth,
                 enhancing immunity, and improving feed efficiency.</p>
@@ -83,11 +84,12 @@
       </div>
 
       <!-- Brochure Card -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-6">
         <a href="./assets/files/iec_brochure/KM-BROCHURE-FINAL.pdf" target="_blank" class="text-decoration-none">
           <div class="card h-100 shadow brochure-card">
               <img src="./assets/img/iec_thumbnail/iec_km_brochure.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
-            <div class="card-body">
+              <div class="overlay"><i class="fa fa-eye"  style="font-size: 24px;"></i></div>
+              <div class="card-body">
               <h5 class="card-title">Knowledge Management Unit</h5>
               <p class="card-text small text-muted">Where minds sit on the couch, ideas stir in a cup, and knowledge holds the mix.</p>
             </div>
@@ -96,11 +98,12 @@
       </div>
 
       <!-- Brochure Card -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-6">
         <a href="./assets/files/iec_brochure/CIRP_4.pdf" target="_blank" class="text-decoration-none">
           <div class="card h-100 shadow brochure-card">
               <img src="./assets/img/iec_thumbnail/iec_CIRP.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
-            <div class="card-body">
+              <div class="overlay"><i class="fa fa-eye"  style="font-size: 24px;"></i></div>
+              <div class="card-body">
               <h5 class="card-title">Challenges in Rice Production</h5>
               <p class="card-text small text-muted">A quick look into the key issues faced by rice farmers today.</p>
             </div>
@@ -109,11 +112,12 @@
       </div>
 
       <!-- Brochure Card -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-6">
         <a href="./assets/files/iec_brochure/WMSIMCS-Brochure.pdf" target="_blank" class="text-decoration-none">
           <div class="card h-100 shadow brochure-card">
               <img src="./assets/img/iec_thumbnail/iec_wmsimcs.png" alt="ICT Brochure" class="card-img-top" loading="lazy">
-            <div class="card-body">
+              <div class="overlay"><i class="fa fa-eye"  style="font-size: 24px;"></i></div>
+              <div class="card-body">
               <h5 class="card-title">WEED MANAGEMENT STRATEGIES IN MODERN Crop Science</h5>
               <p class="card-text small text-muted">An overview of effective weed control techniques for sustainable crop production.</p>
             </div>
@@ -121,7 +125,7 @@
         </a>
       </div>
     </div>  
-    </div>
+  </div>
     
   </section>
 
