image added on research items

--- a/iot.html
+++ b/iot.html
@@ -76,33 +76,23 @@
 
         <div class="research-card">
           <div class="research-image">
-
-            <picture>
-              <!-- WebP version for modern browsers -->
-              <source srcset="./assets/img/research_thumbnail/iot.webp" type="image/webp">
-              
-              <!-- Fallback PNG version -->
-              <source srcset="./assets/img/research_thumbnail/iot.png" type="image/png">
-              
               <!-- Actual image element with lazy loading -->
               <img 
-                src="./assets/img/research_thumbnail/iot.png" 
+                src="./assets/img/research_thumbnails/reseach-icon-iot.png" 
                 alt="Modern agriculture" 
                 loading="lazy"
                 width="100%"
                 height="auto"
                 style="display: block; object-fit: cover; border-radius: 10px;"
               >
-            </picture>
 
           </div>
           <div class="research-text">
             <h3>Water management and irrigation <hr> </h3>
                 <p>
-                    To address water management, an automated water irrigation system application was designed, utilizing a soil moisture sensor and Raspberry Pi to monitor irrigation levels in real-time. Fault detection in the irrigation system is managed through an Arduino-based serial monitor, ensuring quick identification of issues and minimizing system downtime. Additionally, a water resources thematic map was developed to catalog both existing and potential water resources within the PSAU property, facilitating the identification of <br> various water sources and receivers across the campus. Together, these systems aim to enhance operational efficiency, ensure safety, and promote sustainability within the institution.
-                    </p>
-                    <p>It presents a series of interconnected systems aimed at improving communication, safety, and resource management within an academic institution. One system allows faculty members to post announcements, facilitating communication with students through a centralized application. Another system is designed to enhance safety by recording and displaying data from smoke, temperature, and fire sensors on an LCD monitor, while also sending SMS alerts to authorized fire department personnel in case of emergencies. Additionally, a web-based system embedded in a Raspberry Pi was developed to monitor and control electrical switches manually or via a scheduling system, enabling faculty to set operational schedules. For enhanced security, an IoT-based electronic door lock with an intrusion detection system was also created. Another key system generates topographic maps for various areas within the university, including academic, commercial, and science and technology zones, while also mapping infrastructure facilities across the PSAU campus.
-                </p>
+An automated irrigation system using a soil moisture sensor and Raspberry Pi was developed for real-time water monitoring. Faults are detected via an Arduino-based serial monitor to reduce downtime. A thematic map catalogs PSAU’s existing and potential water resources for better planning.
+
+Other systems enhance communication, safety, and resource management. A centralized app allows faculty to post announcements to students. A fire safety system displays sensor data and sends SMS alerts in emergencies. A Raspberry Pi-based system controls electrical switches manually or by schedule. An IoT door lock with intrusion detection was also created. Lastly, topographic and infrastructure maps of campus zones were generated.                </p>
 
           </div>
         </div>
@@ -110,7 +100,7 @@
             <h3>Initiatives 
                 <hr>
             </h3>
-
+<p>To address water management, an automated water irrigation system application was designed, utilizing a soil moisture sensor and Raspberry Pi to monitor irrigation levels in real-time. Fault detection in the irrigation system is managed through an Arduino-based serial monitor, ensuring quick identification of issues and minimizing system downtime. Additionally, a water resources thematic map was developed to catalog both existing and potential water resources within the PSAU property, facilitating the identification of various water sources and receivers across the campus. Together, these systems aim to enhance operational efficiency, ensure safety, and promote sustainability within the institution. It presents a series of interconnected systems aimed at improving communication, safety, and resource management within an academic institution. One system allows faculty members to post announcements, facilitating communication with students through a centralized application. Another system is designed to enhance safety by recording and displaying data from smoke, temperature, and fire sensors on an LCD monitor, while also sending SMS alerts to authorized fire department personnel in case of emergencies. Additionally, a web-based system embedded in a Raspberry Pi was developed to monitor and control electrical switches manually or via a scheduling system, enabling faculty to set operational schedules. For enhanced security, an IoT-based electronic door lock with an intrusion detection system was also created. Another key system generates topographic maps for various areas within the university, including academic, commercial, and science and technology zones, while also mapping infrastructure facilities across the PSAU campus.</p>
             <h3>R4D Thrusts and Priorities 
                 <hr>
             </h3>
