--- a/aquaculture.html
+++ b/aquaculture.html
@@ -76,23 +76,15 @@
         <div class="research-card">
           <div class="research-image">
 
-            <picture>
-              <!-- WebP version for modern browsers -->
-              <source srcset="./assets/img/research_thumbnail/aqua.webp" type="image/webp">
-              
-              <!-- Fallback PNG version -->
-              <source srcset="./assets/img/research_thumbnail/aqua.png" type="image/png">
-              
               <!-- Actual image element with lazy loading -->
               <img 
-                src="./assets/img/research_thumbnail/aqua.png" 
-                alt="Modern agriculture" 
+                src="./assets/img/research_thumbnails/reseach-icon-aqua.png" 
+                alt="Aquaculture" 
                 loading="lazy"
                 width="100%"
                 height="auto"
                 style="display: block; object-fit: cover; border-radius: 10px;"
               >
-            </picture>
 
           </div>
           <div class="research-text">
